fixing left menu item-text align issue

--- a/modules/jaggeryapps/appmgt/src/site/themes/default/css/styles.css
+++ b/modules/jaggeryapps/appmgt/src/site/themes/default/css/styles.css
@@ -2917,4 +2917,8 @@ ul#appVersionList {
 .noleftpadding {
     padding-left : 0;
 }
+ 
+ .left-menu-icon {
+     width: 30px;
+ }
 
